[gd_scene load_steps=18 format=2]

[ext_resource path="res://Artes/Personagens/Slime/Andar/SlimeAndar6.png" type="Texture" id=1]
[ext_resource path="res://Artes/Personagens/Slime/Andar/SlimeAndar4.png" type="Texture" id=2]
[ext_resource path="res://Artes/Personagens/Slime/Andar/SlimeAndar5.png" type="Texture" id=3]
[ext_resource path="res://Artes/Personagens/Slime/Andar/SlimeAndar1.png" type="Texture" id=4]
[ext_resource path="res://Artes/Personagens/Slime/Dormir/SlimeDormir3.png" type="Texture" id=5]
[ext_resource path="res://Artes/Personagens/Slime/Acordar/SlimeDormir5.png" type="Texture" id=6]
[ext_resource path="res://Artes/Personagens/Slime/Dormir/SlimeDormir1.png" type="Texture" id=7]
[ext_resource path="res://Artes/Personagens/Slime/Dormir/SlimeDormir4.png" type="Texture" id=8]
[ext_resource path="res://Artes/Personagens/Slime/Andar/SlimeAndar2.png" type="Texture" id=9]
[ext_resource path="res://Artes/Personagens/Slime/Acordar/SlimeDormir6.png" type="Texture" id=10]
[ext_resource path="res://Artes/Personagens/Slime/Dormir/SlimeDormir2.png" type="Texture" id=11]
[ext_resource path="res://Artes/Personagens/Slime/Andar/SlimeAndar3.png" type="Texture" id=12]
[ext_resource path="res://Codigos/Protagonista.gd" type="Script" id=13]
[ext_resource path="res://Artes/Luz.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 6.08276

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 10 ), null ],
"loop": true,
"name": "awake",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "sleep",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="sono" type="Timer" parent="."]
wait_time = 0.017
one_shot = true
autostart = true

[node name="awake" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 14 )
texture_scale = 0.5
energy = 0.8
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.0313726, 0.0745098, 0.129412, 0.980392 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -108, -8 )

[node name="Interact" type="Timer" parent="."]
[connection signal="timeout" from="sono" to="." method="_on_sono_timeout"]
[connection signal="timeout" from="awake" to="." method="_on_awake_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Interact" to="." method="_on_Interact_timeout"]
